# lilliput

./: .gitignore  AGENTS.md  admin.html  guide.html  index.html  menu.html  package-lock.json  package.json  vite.config.js
.specstory/history/: 2025-07-18_15-05Z-커서-줄바꿈-단축키-질문.md  2025-08-12_10-14Z-리엑트-제거하고-순수-웹으로-변환하기.md
backend/: docker-compose.yml  pyproject.toml
backend/app/: crud.py  database.py  deps.py  main.py  models.py  schemas.py  store.py
backend/app/routers/: waiting.py
backend/backend/migrations/: env.py
backend/backend/migrations/versions/: 975ccf4e8b5c_create_waiting_table.py
backend/static/pad/: index.html  pad.js
src/: App.jsx
src/components/guide/: GuideSection.jsx
src/data/guide/: guideData.js  index.js
src/data/i18n/: en.json  index.js  ja.json  ko.json  zh.json
src/data/menu/: index.js  menu_drinks.json  menu_foods.json
src/data/menu/raw/: menu_drinks.csv  menu_foods.csv
src/pages/: AdminPage.jsx  GuidePage.jsx  MenuPage.jsx
